# server/api/controllers/applications/controller.js
@@ -2,7 +2,9 @@ import ApplicationsService from '../../services/applications.service';
 
 export class Controller {
   all(req, res) {
-    ApplicationsService.all().then(r => res.json(r));
+    ApplicationsService.all().then(r =>{
+      res.json(r.filter((x)=> !x.deleted))
+    });
   }
 
   byId(req, res) {
@@ -20,6 +22,35 @@ export class Controller {
         .location(`/api/v1/applications/${r.id}`)
         .json(r)
     );
+  }
+
+  update(req, res) {
+    ApplicationsService.byId(req.params.id).then(r => {
+      if (r) {
+        const application = req.body;
+        const id = req.params.id
+        ApplicationsService.update(application, id).then(r =>
+            res
+                .status(201)
+                .location(`/api/v1/applications/${r.id}`)
+                .json(r)
+        );
+      } else res.status(404).end();
+    });
+  }
+
+  deleteApp(req, res) {
+    ApplicationsService.byId(req.params.id).then(r => {
+      if (r){
+        const id= req.params.id
+        ApplicationsService.deleteApp(r, id).then(r =>
+            res
+                .status(201)
+                .location(`/api/v1/applications/${r.id}`)
+                .json(r)
+        );
+      } else res.status(404).end();
+    });
   }
 }
 export default new Controller();
